--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,7 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 pygmentsUseClasses: true
+publishDir: docs
 
 googleAnalytics: UA-123-45
 
